--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Redux utility to collect actions for replaying and logging, with whitelisting and GDPR-friendly controls.",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
