--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A Redux utility to collect actions for replaying and logging, with whitelisting and GDPR-friendly controls.",
   "main": "index.js",
+  "files": ["lib/**/*"],
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
