--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
+    "baseUrl": "src",
+    "paths": {
+      "/*": ["*"]
+    },
     "lib": ["es6", "dom"],
     "declaration": true,
     "outDir": "./dist",
