--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "esModuleInterop": true,
         "declaration": true,
         "outDir": "./dist",
-        "strict": true
+        "strict": true,
+        "noUnusedLocals": true
     },
     "include": ["src"],
     "exclude": ["node_modules", "**/__tests__/*"]
