Method to retrieve list of actions ad-hoc given appropriate key

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "typescript": "^3.2.2"
     },
     "dependencies": {
-        "lodash": "^4.17.11"
+        "lodash": "^4.17.11",
+        "rdct": "^1.0.0"
     }
 }
